--- a/ecommerce - Copy - Copy/ecommerce.css
+++ b/ecommerce - Copy - Copy/ecommerce.css
@@ -3,6 +3,7 @@ body{
     background-color: aliceblue;
     padding: 0;
 }
+
 ::-webkit-scrollbar{
     width: 5px;
     margin-right: 5px;
@@ -225,6 +226,7 @@ nav>.right>span>.userDetails>p{
 .design >div{
     /* height: 450px; */
     position: relative;
+    overflow: hidden;
     background-color: white ;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(232, 232, 232) 0px 0px 0px 1px inset;
     border-radius: 10px;
@@ -237,7 +239,9 @@ nav>.right>span>.userDetails>p{
 
 .design > div>img{
     width: 100%;
-    
+    display: block;
+    object-fit: cover;
+    transition: transform 0.3s;
     height: 300px;
     box-shadow: rgb(255, 255, 255) 0px 0px 0px 1px inset, rgba(215, 215, 215, 0.9) 0px 0px 0px 1px;
     border-radius: 10px 10px 0 0;
@@ -245,6 +249,13 @@ nav>.right>span>.userDetails>p{
     -moz-border-radius: 10px 10px 0 0;
     -ms-border-radius: 10px 10px 0 0;
     -o-border-radius: 10px 10px 0 0;
+}
+.design > div> img:hover{
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 .design >div>h2,h3,h4{
     color: rgb(0, 0, 0);
@@ -256,6 +267,7 @@ nav>.right>span>.userDetails>p{
     margin-bottom: 10px;
     font-size: 1.2rem;
     text-align: center;
+    cursor: pointer;
     
 }
 /* .design >div>h4{
@@ -298,13 +310,14 @@ nav>.right>span>.userDetails>p{
 
 #popup{
     transition: 1s;
-    width: 25%;
+    width: 30%;
     overflow-y: scroll;
     height: 100vh;
     scrollbar-color: red;
     background-color: aqua;
     z-index: 100;
     top: 0;
+    padding-left: 1rem;
     position: fixed;
     right: -100%;
     -webkit-transition: 1s;
@@ -342,4 +355,26 @@ nav>.right>span>.userDetails>p{
 }
 .cart-design> div> h2{
     font-size: 16px;
+}
+
+
+#footer  button{
+    width: 100%;
+    height: 3rem;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+
+#footer>h2>span{
+    color: rgb(255, 9, 9);
+}
+#payment{
+    display: none;
 }
