--- a/ecommerce/ecommerce.css
+++ b/ecommerce/ecommerce.css
@@ -251,3 +251,20 @@ nav > .right{
 .cart-design> div> h2{
     font-size: 16px;
 }
+
+#footer > button{
+    width: 100%;
+    height: 3rem;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#footer>h2>span{
+    color: rgb(255, 9, 9);
+}
